correction of image shift when checked

--- a/with_PNG/button.css
+++ b/with_PNG/button.css
@@ -47,9 +47,13 @@
 .checkbox input:focus+label::before {
     border: dotted 1px blue;
     border-radius: 5px;
+    top: -1px;
+    left: -1px;
 }
 
 .radio input:focus+label::before {
     border: dotted 1px blue;
     border-radius: 50%;
+    top: -1px;
+    left: -1px;
 }
