--- a/with_SVG/button.css
+++ b/with_SVG/button.css
@@ -62,9 +62,13 @@
 .checkbox input:focus+label::before {
     border: dotted 1px blue;
     border-radius: 5px;
+    top: -1px;
+    left: -1px;
 }
 
 .radio input:focus+label::before {
     border: dotted 1px blue;
     border-radius: 50%;
+    top: -1px;
+    left: -1px;
 }
